fixed spacing

--- a/css/help.css
+++ b/css/help.css
@@ -1,27 +1,31 @@
-p{background-color: rgb(200, 236, 248);}
+body{background-color: rgb(200, 236, 248);}
 
 h1{text-align: center;
-    font-size: 200%;}
-h2{text-align: center;
-    font-size: 200%;}
-h3{text-align: center;
-    font-size: 200%;}
-h4{text-align: center;
-    font-size: 200%;}
-    h5{text-align: right;
     }
-    h6{text-align: right;}
-    h7{text-align: center;
-    font-size: 400%;
-   : rgb(0, 147, 206); }
+h2{text-align: center;
+    }
+h3{text-align: center;
+    }
+h4{text-align: center;
+    }
+    h5{text-align: right;
+        font-family: Arial;
+    }
+    
+    
+    h6{text-align: center;
+        font-family: Arial;
+    font-size: 35px;
+color: rgb(0, 147, 206); }
 a{color: white;}
 a:link{
     
     
     color: rgb(255, 255, 255);
     background-color: rgb(0, 168, 235);
-    padding: 15px 25px;
-    font-family: Arial, Arial, Helvetica, sans-serif;
+    padding: 25px 35px;
+    font-family: Arial;
+    font-size: 26px;
      text-decoration: none;
      
 
@@ -29,6 +33,8 @@ a:link{
 a:hover{
     color: rgb(255, 255, 255);
     background-color: rgb(0, 183, 255);
-    font-family: Arial, Arial, Helvetica, sans-serif;
+    font-family: Arial;
+    font-size: 26px;
+
      text-decoration: none;
 }
